src/objects/Term__c.object
<CustomObject>
    <fields>
        <fullName>INTLSemester__c</fullName>
        <label>INTLSemester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall (August)</fullName>
                </value>
                <value>
                    <fullName>Spring (January)</fullName>
                </value>
                <value>
                    <fullName>Summer (May)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fall</fullName>
                </value>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Summer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Term</label>
    <nameField>
        <label>Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>